[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Spirit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Human.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/player/recap_area.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/recap_area_success.png" type="Texture" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/Player/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/Player/spirit_2_human.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Player/human_2_spirit.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 42.0119

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "fail",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "success",
"speed": 5.0
} ]

[node name="Player" type="Node2D" groups=["player"]]
z_index = -1
script = ExtResource( 1 )

[node name="Human" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="HumanLocator" type="RemoteTransform2D" parent="Human"]
remote_path = NodePath("../../HumanCAM")

[node name="Area2D" type="Area2D" parent="Human"]
collision_mask = 0

[node name="ChangeSafeZone" type="CollisionShape2D" parent="Human/Area2D"]
modulate = Color( 0.639216, 0.905882, 0.0470588, 1 )
shape = SubResource( 1 )

[node name="Recap" type="AnimatedSprite" parent="Human"]
visible = false
modulate = Color( 1, 1, 1, 0.615686 )
scale = Vector2( 1.28906, 1.28906 )
z_index = -1
frames = SubResource( 5 )
animation = "fail"
frame = 1
playing = true

[node name="Spirit" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SpiritLocator" type="RemoteTransform2D" parent="Spirit"]
remote_path = NodePath("../../SpiritCAM")

[node name="HumanCAM" type="Camera2D" parent="."]
offset = Vector2( 0, -40 )
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="SpiritCAM" type="Camera2D" parent="."]
offset = Vector2( 0, -40 )
zoom = Vector2( 0.3, 0.3 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Human2Spirit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Spirit2Human" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="is_dead" from="." to="Human" method="_on_Player_is_dead"]
[connection signal="is_dead" from="." to="Spirit" method="_on_Player_is_dead"]
[connection signal="is_dead" from="." to="HUD" method="_on_Player_is_dead"]
[connection signal="is_human" from="." to="HUD" method="_on_Player_is_human"]
[connection signal="is_spirit" from="." to="HUD" method="_on_Player_is_spirit"]
[connection signal="respawned" from="." to="Human" method="_on_Player_respawned"]
[connection signal="respawned" from="." to="Spirit" method="_on_Player_respawned"]
[connection signal="respawned" from="." to="HUD" method="_on_Player_respawned"]
[connection signal="update_health" from="." to="HUD" method="_on_Player_update_health"]
[connection signal="damage_taken" from="Human" to="." method="_on_Human_damage_taken"]
[connection signal="body_entered" from="Human/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Human/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="damage_taken" from="Spirit" to="." method="_on_Spirit_damage_taken"]
[connection signal="respawn_pressed" from="HUD" to="." method="_on_HUD_respawn_pressed"]
